--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "default": "src/index.html",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,9 +17,10 @@
   "bugs": {
     "url": "https://github.com/promisekept/myFlix-client/issues"
   },
-  "homepage": "https://github.com/promisekept/myFlix-client#readme",
+  "homepage": "https://promisekept.github.io/myFlix-client/",
   "dependencies": {
     "axios": "^0.27.1",
+    "gh-pages": "^3.2.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
