--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/promisekept/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.27.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
