--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/promisekept/myFlix-client#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.27.1",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -26,6 +31,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
     "buffer": "^6.0.3",
     "parcel": "^2.5.0",
